part1/1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persistent-ping-log-app-svc
spec:
  type: ClusterIP
  selector:
    app: persistent-ping-log-app
  ports:
    - name: ping-pong
      port: 5151
      protocol: TCP
      targetPort: 3000 # The app's exposed port (defined 3000 in the source code)
    - name: logger
      port: 5152
      protocol: TCP
      targetPort: 3001 # The app's exposed port (defined 3001 in the source code)
